Fixing alignment

--- a/design/styles.css
+++ b/design/styles.css
@@ -1,6 +1,11 @@
+/* main {
+  width: 1200px;
+  margin: 0 auto;
+} */
+
 section {
   display: grid;
-  max-width: 1000px;
+  max-width: 1200px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
@@ -33,6 +38,7 @@ button {
   background-color: white;
   width: 50%;
   padding: 6px;
+  /* align-self: flex-end; */
   justify-content: left;
 }
 
